add all filters set limit title characters

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
                                     </div>
                                     <div class="content">
                                         <span class="category"><a href="#">{{ prod.categories }}</a></span>
-                                        <h5 class="title"><a href="single-product.html">{{ prod.name }}
+                                        <h5 class="title" style="text-align: center"><a href="single-product.html">{{ prod.name | truncatechars:50 }}
                                             </a>
                                         </h5>
                                         <span class="price">
