--- a/templates/base.html
+++ b/templates/base.html
@@ -17,15 +17,15 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico" />
     <!-- CSS
     ============================================ -->
-    <!-- <link rel="stylesheet" href="static/css/bootstrap.min.css" />
+    <<link rel="stylesheet" href="static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="static/css/font.awesome.css" />
     <link rel="stylesheet" href="static/css/pe-icon-7-stroke.css" />
     <link rel="stylesheet" href="static/css/animate.min.css">
     <link rel="stylesheet" href="static/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="static/css/venobox.css">
-    <link rel="stylesheet" href="static/css/jquery-ui.min.css"> -->
+    <link rel="stylesheet" href="static/css/jquery-ui.min.css">
     <!-- Style CSS -->
-    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
+    <link rel="stylesheet" href="static/css/style.css">
     <!-- Minify Version -->
     <link rel="stylesheet" href="static/css/plugins.min.css">
     <link rel="stylesheet" href="static/css/style.min.css">
