add all filters set limit title characters

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,8 +67,8 @@
                 </div>
                 <div class="col-lg-6 d-none d-lg-block">
                     <div class="search-element">
-                        <form action="#">
-                            <input type="text" placeholder="Search"/>
+                        <form action="{% url 'shop:search' %}" method="get">
+                            <input type="text" placeholder="Search" name="query" id="query"/>
                             <button><i class="pe-7s-search"></i></button>
                         </form>
                     </div>
@@ -650,48 +650,18 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/zoom-image/1.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/zoom-image/2.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/zoom-image/3.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/zoom-image/4.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/zoom-image/5.webp" alt="">
+                                         src="{{ prod.image }}" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-container gallery-thumbs mt-20px slider-nav-style-1 small-nav">
                             <div class="swiper-wrapper">
+                                {% for img in prod.images_set.all %}
                                 <div class="swiper-slide">
                                     <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/small-image/1.webp" alt="">
+                                         src="{{ img.image }}" alt="">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/small-image/2.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/small-image/3.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/small-image/4.webp" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img class="img-responsive m-auto"
-                                         src="/static/images/product-image/small-image/5.webp" alt="">
-                                </div>
+                                {% endfor %}
                             </div>
                             <!-- Add Arrows -->
                             <div class="swiper-buttons">
@@ -718,38 +688,26 @@
                                 </div>
                                 <span class="read-review"><a class="reviews" href="#">( 2 Review )</a></span>
                             </div>
-                            <p class="mt-30px">Lorem ipsum dolor sit amet, consecte adipisicing elit, sed do eiusmll
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad mill veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip exet commodo consequat. Duis aute irure
-                                dolor</p>
-                            <div class="pro-details-categories-info pro-details-same-style d-flex m-0">
-                                <span>SKU:</span>
-                                <ul class="d-flex">
-                                    <li>
-                                        <a href="#">Ch-256xl</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <p class="mt-30px">{{ prod.information }}</p>
                             <div class="pro-details-categories-info pro-details-same-style d-flex m-0">
                                 <span>Categories: </span>
                                 <ul class="d-flex">
                                     <li>
-                                        <a href="#">Smart Device, </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">ETC</a>
+                                        <a href="#">{{ prod.categories }}</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="pro-details-categories-info pro-details-same-style d-flex m-0">
                                 <span>Tags: </span>
                                 <ul class="d-flex">
+
                                     <li>
-                                        <a href="#">Smart Device, </a>
+                                        {% for tags in prod.tags_set.all %}
+                                        <a href="#">{{tags.name}},</a>
+                                        <a href="#">{{tags.name}},</a>
+                                        {% endfor %}
                                     </li>
-                                    <li>
-                                        <a href="#">Phone</a>
-                                    </li>
+
                                 </ul>
                             </div>
                             <div class="pro-details-quality">
