--- a/templates/search.html
+++ b/templates/search.html
@@ -1,27 +1,10 @@
 {% extends 'base.html' %}
-{% block content %}
- <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Product Page</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Shop</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
-        <!-- Shop Page Start  -->
+{%  block content %}
+<!-- Shop Page Start  -->
         <div class="shop-category-area pt-100px pb-100px">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-9 order-lg-last col-md-12 order-md-first">
+                    <div class="col-md-12">
                         <!-- Shop Top Area Start -->
                         <div class="shop-top-bar d-flex">
                             <p class="compare-product"> <span>12</span> Product Found of <span>30</span></p>
@@ -43,12 +26,12 @@
                                 <div class="header-bottom-set dropdown">
                                     <button class="dropdown-toggle header-action-btn" data-bs-toggle="dropdown">Default <i class="fa fa-angle-down"></i></button>
                                     <ul class="dropdown-menu dropdown-menu-right">
-                                        <li><a class="dropdown-item" href="{% url 'shop:products' %}{% for i in product %}?AtoZ={{i.id }}{% endfor %}">Name, A to Z</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'shop:products' %}{% for i in product %}?ZtoA={{i.id }}{% endfor %}">Name, Z to A</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'shop:products' %}{% for i in product %}?lowtohigh={{i.id }}{% endfor %}">Price, low to high</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'shop:products' %}{% for i in product %}?hightolow={{i.id }}{% endfor %}">Price, high to low</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'shop:products' %}{% for i in product %}?new={{i.id}}{% endfor %}">Sort By new</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'shop:products' %}{% for i in product %}?old={{i.id}}{% endfor %}">Sort By old</a></li>
+                                        <li><a class="dropdown-item" href="#">Name, A to Z</a></li>
+                                        <li><a class="dropdown-item" href="#">Name, Z to A</a></li>
+                                        <li><a class="dropdown-item" href="#">Price, low to high</a></li>
+                                        <li><a class="dropdown-item" href="#">Price, high to low</a></li>
+                                        <li><a class="dropdown-item" href="#">Sort By new</a></li>
+                                        <li><a class="dropdown-item" href="#">Sort By old</a></li>
                                     </ul>
                                 </div>
                                 <!-- Single Wedge Start -->
@@ -56,6 +39,9 @@
                             <!-- Right Side End -->
                         </div>
                         <!-- Shop Top Area End -->
+                       {% if product|length < 1 %}
+                     <h2>Product Not Found !!</h2>
+                     {% endif %}
                         <!-- Shop Bottom Area Start -->
                         <div class="shop-bottom-area">
                             <!-- Tab Content Area Start -->
@@ -65,7 +51,7 @@
                                         <div class="tab-pane fade show active" id="shop-grid">
                                             <div class="row mb-n-30px">
                                                 {% for prod in product %}
-                                                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 mb-30px">
+                                                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-6 mb-30px">
                                                     <!-- Single Prodect -->
                                                     <div class="product">
                                                         {% if prod.condition == "New" %}
@@ -79,13 +65,13 @@
                                                                   {% endif %}
                                                         <div class="thumb">
                                                             <a href="single-product.html" class="image">
-                                                                <img src="{{ prod.image }}" alt="Product" />
-                                                                <img class="hover-image" src="{{ prod.image }}" alt="Product" />
+                                                                <img src="{{ prod.image }}" alt="{{ prod.name }}" />
+                                                                <img class="hover-image" src="{{ prod.image}}" alt="Product" />
                                                             </a>
                                                         </div>
                                                         <div class="content">
                                                             <span class="category"><a href="#">{{ prod.categories }}</a></span>
-                                                            <h5 class="title" style="text-align: center;"><a href="single-product.html">{{ prod.name | truncatechars:50}}
+                                                            <h5 class="title"><a href="single-product.html">{{ prod.name }}
                                                                 </a>
                                                             </h5>
                                                             <span class="price">
@@ -97,7 +83,7 @@
                                                                 class="pe-7s-shopbag"></i></button>
                                                             <button class="action wishlist" title="Wishlist" data-bs-toggle="modal" data-bs-target="#exampleModal-Wishlist"><i
                                                                     class="pe-7s-like"></i></button>
-                                                            <button class="action quickview" data-link-action="quickview" title="Quick view" data-bs-toggle="modal" data-bs-target="#exampleModal-{{ forloop.counter }}"><i class="pe-7s-look"></i></button>
+                                                            <button class="action quickview" data-link-action="quickview" title="Quick view" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="pe-7s-look"></i></button>
                                                             <button class="action compare" title="Compare" data-bs-toggle="modal" data-bs-target="#exampleModal-Compare"><i
                                                                     class="pe-7s-refresh-2"></i></button>
                                                         </div>
@@ -133,12 +119,12 @@
                                                         <div class="content-desc-wrap">
                                                             <div class="content">
                                                                 <span class="category"><a href="#">{{ prod.categories }}</a></span>
-                                                                <h5 class="title"><a href="single-product.html">{{ prod.name }}</a></h5>
-                                                                <p>{{ prod.information }} </p>
+                                                                <h5 class="title"><a href="single-product.html">{{ prod.name}}</a></h5>
+                                                                <p>{{prod.information }}</p>
                                                             </div>
                                                             <div class="box-inner">
                                                                 <span class="price">
-                                                                    <span class="new">₹{{ prod.price }}</span>
+                                                                <span class="new">₹{{ prod.price }}</span>
                                                                 </span>
                                                                 <div class="actions">
                                                                     <button title="Add To Cart" class="action add-to-cart" data-bs-toggle="modal" data-bs-target="#exampleModal-Cart"><i
@@ -178,63 +164,8 @@
                         </div>
                         <!-- Shop Bottom Area End -->
                     </div>
-                    <!-- Sidebar Area Start -->
-                    <div class="col-lg-3 order-lg-first col-md-12 order-md-last">
-                        <div class="shop-sidebar-wrap">
-                            <!-- Sidebar single item -->
-                            <div class="sidebar-widget">
-                                <h4 class="sidebar-title">Top Categories</h4>
-                                <div class="sidebar-widget-category">
-                                    <ul>
-                                        <li><a href="{% url 'shop:products' %}" class="selected m-0"> All
-                                                <span>(65)</span> </a></li>
-                                        {% for cate in categories %}
-                                        <li><a href="{%url 'shop:products' %}?category={{ cate.id }}" class="selected m-0"> {{ cate.name }}
-                                                <span></span> </a></li>
-                                        {% endfor %}
-
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- Sidebar single item -->
-                            <div class="sidebar-widget mt-8">
-                                <h4 class="sidebar-title">Price Filter</h4>
-                                <div class="price-filter">
-                                    {% for f_price in filter_price %}
-                                    <div class="price-slider-amount">
-                                        <li><a href="{% url 'shop:products' %}?filter_price={{ f_price.id }}" >{{f_price.price_range }}</a></li>
-                                    </div>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                            <!-- Sidebar single item -->
-                            <div class="sidebar-widget">
-                                <h4 class="sidebar-title">Color</h4>
-                                <div class="sidebar-widget-color">
-                                    <ul class="d-flex flex-wrap">
-                                        {% for col in color %}
-                                        <li><a href="{% url 'shop:products' %}?color={{ col.id }}" class="color" style="background-color: #{{ col.code }}"></a></li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- Sidebar single item -->
-                            <div class="sidebar-widget">
-                                <h4 class="sidebar-title">Brands</h4>
-                                <div class="sidebar-widget-brand">
-                                    <ul>
-                                        {% for brand in brands %}
-                                        <li><a href="{% url 'shop:products' %}?brands={{ brand.id }}" class="selected m-0">{{ brand.name }}<span>(65)</span> </a></li>
-                                        {% endfor %}
-
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- Sidebar single item -->
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
         <!-- Shop Page End  -->
-{% endblock %}
+{%  endblock %}
