add all filters set limit title characters

--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
 
 
                                     <div class="thumb">
-                                        <a href="single-product.html" class="image">
+                                        <a href="{{ prod.id }}" class="image">
                                             <img src="{{ prod.image }}" alt="Product" />
                                             <img class="hover-image" src="{{ prod.image }}" alt="Product" />
                                         </a>
