--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico"/>
     <!-- CSS
     ============================================ -->
-    <
     <link rel="stylesheet" href="static/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="static/css/font.awesome.css"/>
     <link rel="stylesheet" href="static/css/pe-icon-7-stroke.css"/>
@@ -704,7 +703,6 @@
                                     <li>
                                         {% for tags in prod.tags_set.all %}
                                         <a href="#">{{tags.name}},</a>
-                                        <a href="#">{{tags.name}},</a>
                                         {% endfor %}
                                     </li>
 
@@ -798,7 +796,7 @@
 <!-- Global Vendor, plugins JS -->
 <!-- JS Files
 ============================================ -->
-<!-- <script src="/static/js/vendor/bootstrap.bundle.min.js"></script>
+ <script src="/static/js/vendor/bootstrap.bundle.min.js"></script>
 <script src="/static/js/vendor/jquery-3.6.0.min.js"></script>
 <script src="/static/js/vendor/jquery-migrate-3.3.2.min.js"></script>
 <script src="/static/js/vendor/modernizr-3.11.2.min.js"></script>
@@ -807,7 +805,7 @@
 <script src="/static/js/plugins/scrollUp.js"></script>
 <script src="/static/js/plugins/venobox.min.js"></script>
 <script src="/static/js/plugins/jquery-ui.min.js"></script>
-<script src="/static/js/plugins/mailchimp-ajax.js"></script> -->
+<script src="/static/js/plugins/mailchimp-ajax.js"></script>
 
 <!-- Minify Version -->
 <script src="/static/js/vendor.min.js"></script>
