--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico"/>
     <!-- CSS
     ============================================ -->
-    <
     <link rel="stylesheet" href="static/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="static/css/font.awesome.css"/>
     <link rel="stylesheet" href="static/css/pe-icon-7-stroke.css"/>
@@ -798,7 +797,7 @@
 <!-- Global Vendor, plugins JS -->
 <!-- JS Files
 ============================================ -->
-<!-- <script src="/static/js/vendor/bootstrap.bundle.min.js"></script>
+ <script src="/static/js/vendor/bootstrap.bundle.min.js"></script>
 <script src="/static/js/vendor/jquery-3.6.0.min.js"></script>
 <script src="/static/js/vendor/jquery-migrate-3.3.2.min.js"></script>
 <script src="/static/js/vendor/modernizr-3.11.2.min.js"></script>
@@ -807,7 +806,7 @@
 <script src="/static/js/plugins/scrollUp.js"></script>
 <script src="/static/js/plugins/venobox.min.js"></script>
 <script src="/static/js/plugins/jquery-ui.min.js"></script>
-<script src="/static/js/plugins/mailchimp-ajax.js"></script> -->
+<script src="/static/js/plugins/mailchimp-ajax.js"></script>
 
 <!-- Minify Version -->
 <script src="/static/js/vendor.min.js"></script>
