add all filters set limit title characters

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,12 @@
                             <li><a href="tel:0123456789"><i class="fa fa-phone"></i> +012 3456 789</a></li>
                             <li><a href="mailto:demo@example.com"><i class="fa fa-envelope-o"></i> demo@example.com</a>
                             </li>
-                            <li><a href="my-account.html"><i class="fa fa-user"></i> Account</a></li>
+                            <li><a href="my-account.html"><i class="fa fa-user-circle-o"></i> Account</a></li>
+                             {% if user.is_authenticated %}
+                            <li><a href="{% url 'shop:Logout' %}"><i class="fa fa-sign-out"></i></i>Logout</a> </li>
+                            {% else %}
+                            <li><a href="{% url 'shop:Login' %}">Login</a> </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
